# python-base

./: .flake8  README.md  algoritmo.py  coringas.py  email_tmpl.txt  errors.py  escola_v1_listas.py  escopo.py  exercicios.py  hello.py  infixcalc.py  interpolacao.py  logs.py  names.txt  pyproject.toml  reservas.txt  run.cmd  smtp.py  tabuada.py  valores_default.py
day1-4/: algoritmo.py  anatomia_funcao.py  cadastro_produto.py  composicao.py  contador.py  coringas.py  decorators.py  emails.txt  errors.py  escola_v1_listas.py  escola_v2_set.py  escola_v3_dict.py  escopo.py  exercicios.py  forcando_global.py  funcoes.py  hello.py  infixcalc.py  interpolacao.py  lambdas.py  logs.py  names.txt  non_local.py  notes.py  notes.txt  questions.py  reservas.txt  smtp.py  tabuada.py  tembug.py  valores_default.py  valores_default_mutaveis.py
day5-7/: band.py  exerciciresooo.py  instruments.py  match_turtle.py  oo.py  pilares.py  property.py
day5-8/: cor.py  exerciciooo.py  protocolo.py
day8/: colors.py  kivy_example.py  processa_palavras.py  pygame_example.py  simple_example.py  tk_example.py  tui_pylavras.py
day8/web/: api.py  app.py
day8/web/templates/: index.html  pessoas.html
extras/: simple.py
