[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-base"
version = "0.1.0"
description = "Projeto base para aplicações rest usando fastapi framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: Portuguese (Brazilian)",
]

dependencies = [
]

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "ipdb", "ipython"]
test = ["httpx", "pytest", "pytest-cov"]

[tool.isort]
py_version=310

[project.urls]
# homepage = "https://vf79.com.br/projetos/project_template"
repository = "https://github.com/vf79/python-base"